# godl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  deploy_linux.nu  deploy_linux_flatpak.nu  deploy_win.nu  io.github.sockeye_d.godl.desktop  io.github.sockeye_d.godl.metainfo.xml  io.github.sockeye_d.godl.yml  org.fishy.godl.desktop  org.fishy.godl.yml
src/: CMakeLists.txt  Main.qml  RemoteVersionsPage.qml  Settings.qml  config.kcfg  config.kcfgc  configsignals.cpp  configsignals.h  generate_ico.nu  godlapp.cpp  godlapp.h  main.cpp  main.h  projecttemplates.cpp  projecttemplates.h  resources.qrc  serializable.h  template.cpp  template.h  templatedata.cpp  templatedata.h  versioninfo.cpp  versioninfo.h
src/cli/: ansi.cpp  ansi.h  cliutil.cpp  cliutil.h  createcommand.cpp  createcommand.h  editcommand.cpp  editcommand.h  gconfigcommand.cpp  gconfigcommand.h  importcommand.cpp  importcommand.h  installcommand.cpp  installcommand.h  interface.cpp  interface.h  parser.cpp  parser.h  remotecommand.cpp  remotecommand.h  run.cpp  run.h  testcommand.cpp  testcommand.h  versioncommand.cpp  versioncommand.h
src/model/: abstractsimplelistmodel.cpp  abstractsimplelistmodel.h  downloadmanagermodel.cpp  downloadmanagermodel.h  internalprojectsregistrymodel.cpp  internalprojectsregistrymodel.h  listbasedmodel.cpp  listbasedmodel.h  projectsregistrymodel.cpp  projectsregistrymodel.h  versionregistrymodel.cpp  versionregistrymodel.h
src/network/: chained_json_request.cpp  chained_json_request.h  chainedjsonrequest.cpp  chainedjsonrequest.h  downloadinfo.h  downloadmanager.cpp  downloadmanager.h  downloadmanagermodel.cpp  downloadmanagermodel.h  godotdownloadmanager.cpp  godotdownloadmanager.h  godotversion.cpp  godotversion.h  macros.h  network.h  networkresponsecode.cpp  networkresponsecode.h  versionregistry.cpp  versionregistry.h
src/registry/: boundgodotversion.cpp  boundgodotversion.h  godotproject.cpp  godotproject.h  godotversion.cpp  godotversion.h  projectsregistry.cpp  projectsregistry.h  versionregistry.cpp  versionregistry.h
src/templates/default/: godlproject  metatemplate.json  project.godot
src/templates/default (Godot 3)/: godlproject  metatemplate.json  project.godot
src/ui/: DateLabel.qml  LocalVersionCard.qml  LocalVersionsPage.qml  Main.qml  NewProjectPage.qml  PlatformActionMenuItem.qml  ProjectCard.qml  ProjectsPage.qml  RemoteVersionsPage.qml
src/ui/config/: ConfigPage.qml  ConfigPageFormCard.qml  ConfigStringListFormCard.qml  DownloadsConfigPage.qml  DownloadsPage.qml  FormActionTextFieldDelegate.qml  GeneralConfigPage.qml  GeneralPage.qml  GodlConfigPage.qml  ProjectsConfigPage.qml
src/util/: circularbuffer.h  dateconverter.cpp  dateconverter.h  fileutil.cpp  fileutil.h  iconconverter.cpp  iconconverter.h  singleton.h  sizeconverter.cpp  sizeconverter.h  util.cpp  util.h
src/widgets/: betterfiledialog.cpp  betterfiledialog.h
